CSS, fixed import function and added a method to replace overflow text with '...'

--- a/clients/web/css/styles.css
+++ b/clients/web/css/styles.css
@@ -212,6 +212,14 @@ RATE CLEANLINESS
   background-color: rgba(100,100,100,0.5);
   height: 5%;
 }
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border-bottom: 44px solid black; 
+    border-left: 22px solid transparent; 
+    border-right: 22px solid transparent;
+    height: 5%;
+    width: 5%;
+}
 .btn-submit {
   border-width: 5px;
   border-color: black;
@@ -469,10 +477,8 @@ h5 {
   border-radius: 0%;
   font-size: 8%;
   width: 50%;
-  border-width: 5px;
+  border: 5px solid rgb(75,75,75);
   height: 10%;
   color: black;
-  border-style: solid;
-  border-color: black;
   display: inline-block;
 }
